--- a/L8Application/L8Application.csproj
+++ b/L8Application/L8Application.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\L8COM\L8COM.csproj" />
+  </ItemGroup>
+
 </Project>
